[PE] Turn on half-width tiles for all platforms and devices.

Full-width offscreen tiles become increasingly expensive on
larger displays.

Bug: 768799
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel
Change-Id: Ibb2423c6dc956a7ad81a85d12aefd9d58ee28872
Reviewed-on: https://chromium-review.googlesource.com/806994
Reviewed-by: Antoine Labour <piman@chromium.org>
Reviewed-by: Eric Karl <ericrk@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#521586}
Former-commit-id: a3e4477c29d087d3708dbcb4dc5a90985c2b45e3